--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
+    <!-- App Name -->
     <string name="app_name">E-Learning App</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+
+    <!-- Bottom Nav -->
+    <string name="title_learning_material">Learn</string>
+    <string name="title_test_material">Test</string>
+    <string name="title_stats">Statistics</string>
+
 </resources>
