--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,9 @@
     <string name="unit_3_text">Unit 3</string>
     <string name="unit_selection">Unit Selection</string>
     <string name="first_unit">Unit 1</string>
+    <string name="second_unit">Unit 2</string>
+    <string name="third_unit">Unit 3</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
