--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string name="nebula_image_desc"> Carina Nebula from James Web Telescope</string>
+    <string name="solar_system">The Sun, planets, and dwarf planets</string>
 </resources>
