--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,11 +36,11 @@
 
     <string name="planet_earth_desc">Earth is the third planet from the Sun and the only astronomical object known to harbor life.
         While large volumes of water can be found throughout the Solar System, only Earth sustains liquid surface water.
-       <!-- About 71% of Earth\'s surface is made up of the ocean, dwarfing Earth\'s polar ice, lakes, and rivers.
+        <!-- About 71% of Earth\'s surface is made up of the ocean, dwarfing Earth\'s polar ice, lakes, and rivers.
         The remaining 29% of Earth\'s surface is land, consisting of continents and islands.
         Earth's surface layer is formed of several slowly moving tectonic plates, interacting to produce mountain ranges, volcanoes, and earthquakes. Earth's liquid outer core generates the magnetic field that shapes Earth's magnetosphere, deflecting destructive solar winds.--> </string>
 
-   <string name="planet_jupiter_desc">Jupiter is the fifth planet from the Sun and the largest in the Solar System.
+    <string name="planet_jupiter_desc">Jupiter is the fifth planet from the Sun and the largest in the Solar System.
        It is a gas giant with a mass more than two and a half times that of all the other planets in the Solar System combined, but slightly less than one-thousandth the mass of the Sun.
        Jupiter is the third brightest natural object in the Earth\'s night sky after the Moon and Venus, and it has been observed since prehistoric times.
        It was named after the Roman god Jupiter, the king of the gods. </string>
@@ -52,5 +52,13 @@
     <string name="planet_uranus_desc">Uranus is the seventh planet from the Sun. Its name is a reference to the Greek god of the sky, Uranus (Caelus), who, according to Greek mythology, was the great-grandfather of Ares (Mars), grandfather of Zeus (Jupiter) and father of Cronus (Saturn). It has the third-largest planetary radius and fourth-largest planetary mass in the Solar System. Uranus is similar in composition to Neptune, and both have bulk chemical compositions which differ from that of the larger gas giants Jupiter and Saturn. For this reason, scientists often classify Uranus and Neptune as "ice giants" to distinguish them from the other giant planets.  </string>
     <string name="planet_venus_desc">Venus is the second planet from the Sun and is named after the Roman goddess of love and beauty. As the brightest natural object in Earth\'s night sky after the Moon, Venus can cast shadows and can be visible to the naked eye in broad daylight.[18][19] Venus\'s orbit is smaller than that of Earth, but its maximal elongation is 47°; thus, at latitudes with a day-night cycle, it is most readily visible for up to a few hours following the start of sunset or before sunrise. Unlike Mercury, which can only be observed during twilight, Venus can be seen in a completely dark sky. Venus orbits the Sun every 224.7 Earth days,[20] but rotates around its axis in 243 Earth days. Consequently, it takes longer to rotate about its axis than any other planet in the Solar System, and does so in the opposite direction to all but Uranus. This means that the Sun rises from its western horizon and sets in its east. This retrograde rotation creates a synodic day of only 117 Earth days.[21] Venus does not have any moons, a distinction it shares only with Mercury among the planets in the Solar System. </string>
     <string name="third_unit_planets_image_view_desc">planets</string>
+
+    <!-- Tests -->
+    <string name="test_selection">Select a Test!</string>
+    <string name="revision_text"> Revision</string>
+    <string name="unit_1_test_text">Unit 1 - Test</string>
+    <string name="unit_2_test_text">Unit 2 - Test</string>
+    <string name="unit_3_test_text">Unit 3 - Test</string>
+    <string name="revision_test_text"> Revision - Test</string>
 
 </resources>
