--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,12 +46,33 @@
        Jupiter is the third brightest natural object in the Earth\'s night sky after the Moon and Venus, and it has been observed since prehistoric times.
        It was named after the Roman god Jupiter, the king of the gods. </string>
 
-    <string name="planet_mars_desc">Mars is the fourth planet from the Sun and the second-smallest planet in the Solar System, being larger than only Mercury. In the English language, Mars is named for the Roman god of war. Mars is a terrestrial planet with a thin atmosphere, and has a crust primarily composed of elements similar to Earth\'s crust, as well as a core made of iron and nickel. Mars has surface features such as impact craters, valleys, dunes, and polar ice caps. It has two small and irregularly shaped moons: Phobos and Deimos.  </string>
-    <string name="planet_mercury_desc">Mercury is the smallest planet in the Solar System and the closest to the Sun. Its orbit around the Sun takes 87.97 Earth days, the shortest of all the Sun\'s planets. It is named after the Roman god Mercurius (Mercury), god of commerce, messenger of the gods, and mediator between gods and mortals, corresponding to the Greek god Hermes (Ἑρμῆς). Like Venus, Mercury orbits the Sun within Earth\'s orbit as an inferior planet, and its apparent distance from the Sun as viewed from Earth never exceeds 28°. This proximity to the Sun means the planet can only be seen near the western horizon after sunset or the eastern horizon before sunrise, usually in twilight. At this time, it may appear as a bright star-like object, but is more difficult to observe than Venus. From Earth, the planet telescopically displays the complete range of phases, similar to Venus and the Moon, which recurs over its synodic period of approximately 116 days.  </string>
-    <string name="planet_neptune_desc">Neptune is the eighth planet from the Sun and the farthest known solar planet. In the Solar System, it is the fourth-largest planet by diameter, the third-most-massive planet, and the densest giant planet. It is 17 times the mass of Earth, and slightly more massive than its near-twin Uranus. Neptune is denser and physically smaller than Uranus because its greater mass causes more gravitational compression of its atmosphere. It is referred to as one of the solar system\'s two ice giant planets (the other one being Uranus).  </string>
+    <string name="planet_mars_desc">Mars is the fourth planet from the Sun and the second-smallest planet in the Solar System, being larger than only Mercury.
+        In the English language, Mars is named for the Roman god of war.
+        Mars is a terrestrial planet with a thin atmosphere, and has a crust primarily composed of elements similar to Earth\'s crust, as well as a core made of iron and nickel.
+        Mars has surface features such as impact craters, valleys, dunes, and polar ice caps. It has two small and irregularly shaped moons: Phobos and Deimos.  </string>
+
+    <string name="planet_mercury_desc">Mercury is the smallest planet in the Solar System and the closest to the Sun.
+        Its orbit around the Sun takes 87.97 Earth days, the shortest of all the Sun\'s planets.
+        It is named after the Roman god Mercurius (Mercury), god of commerce, messenger of the gods, and mediator between gods and mortals, corresponding to the Greek god Hermes (Ἑρμῆς).
+        Like Venus, Mercury orbits the Sun within Earth\'s orbit as an inferior planet, and its apparent distance from the Sun as viewed from Earth never exceeds 28°.
+        This proximity to the Sun means the planet can only be seen near the western horizon after sunset or the eastern horizon before sunrise, usually in twilight.
+        At this time, it may appear as a bright star-like object, but is more difficult to observe than Venus.
+        From Earth, the planet telescopically displays the complete range of phases, similar to Venus and the Moon, which recurs over its synodic period of approximately 116 days.  </string>
+
+    <string name="planet_neptune_desc">Neptune is the eighth planet from the Sun and the farthest known solar planet.
+        In the Solar System, it is the fourth-largest planet by diameter, the third-most-massive planet, and the densest giant planet.
+        It is 17 times the mass of Earth, and slightly more massive than its near-twin Uranus. Neptune is denser and physically smaller than Uranus because its greater mass causes more gravitational compression of its atmosphere.
+        It is referred to as one of the solar system\'s two ice giant planets (the other one being Uranus).  </string>
+
     <string name="planet_saturn_desc">Saturn is the sixth planet from the Sun and the second-largest in the Solar System, after Jupiter.
         It is a gas giant with an average radius of about nine and a half times that of Earth. It has only one-eighth the average density of Earth; however, with its larger volume, Saturn is over 95 times more massive. </string>
-    <string name="planet_uranus_desc">Uranus is the seventh planet from the Sun. Its name is a reference to the Greek god of the sky, Uranus (Caelus), who, according to Greek mythology, was the great-grandfather of Ares (Mars), grandfather of Zeus (Jupiter) and father of Cronus (Saturn). It has the third-largest planetary radius and fourth-largest planetary mass in the Solar System. Uranus is similar in composition to Neptune, and both have bulk chemical compositions which differ from that of the larger gas giants Jupiter and Saturn. For this reason, scientists often classify Uranus and Neptune as "ice giants" to distinguish them from the other giant planets.  </string>
+
+    <string name="planet_uranus_desc">Uranus is the seventh planet from the Sun.
+        Its name is a reference to the Greek god of the sky, Uranus (Caelus), who, according to Greek mythology, was the great-grandfather of Ares (Mars), grandfather of Zeus (Jupiter) and father of Cronus (Saturn).
+        It has the third-largest planetary radius and fourth-largest planetary mass in the Solar System.
+        Uranus is similar in composition to Neptune, and both have bulk chemical compositions which differ from that of the larger gas giants Jupiter and Saturn.
+        For this reason, scientists often classify Uranus and Neptune as "ice giants" to distinguish them from the other giant planets.  </string>
+
     <string name="planet_venus_desc">Venus is the second planet from the Sun and is named after the Roman goddess of love and beauty.
         As the brightest natural object in Earth\'s night sky after the Moon, Venus can cast shadows and can be visible to the naked eye in broad daylight.
         Venus\'s orbit is smaller than that of Earth, but its maximal elongation is 47°; thus, at latitudes with a day-night cycle, it is most readily visible for up to a few hours following the start of sunset or before sunrise.
@@ -60,6 +81,7 @@
         Consequently, it takes longer to rotate about its axis than any other planet in the Solar System, and does so in the opposite direction to all but Uranus.
         This means that the Sun rises from its western horizon and sets in its east. This retrograde rotation creates a synodic day of only 117 Earth days.
         Venus does not have any moons, a distinction it shares only with Mercury among the planets in the Solar System. </string>
+
     <string name="third_unit_planets_image_view_desc">planets</string>
 
     <!-- Tests -->
